Fix tabs not showing in session page

--- a/projects/commudle-admin/src/app/feature-modules/public-events/components/speaker-session-page/speaker-session-page.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/public-events/components/speaker-session-page/speaker-session-page.component.scss
@@ -112,6 +112,7 @@
 
             nb-tabset {
               height: 100%;
+              margin-top: 32px;
 
               nb-tab {
                 padding: 0;
@@ -291,6 +292,7 @@ nb-tabset {
       li {
         a {
           padding: 10px 10px;
+
           span {
             white-space: nowrap;
           }
